Iniciando troca de mensagens.

--- a/scripts/lang/language.xml
+++ b/scripts/lang/language.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <language name="pt_BR">
 	<general>
 		<general_title>Cliente Web ChessD</general_title>
