--- a/scripts/lang/language.xml
+++ b/scripts/lang/language.xml
@@ -12,4 +12,7 @@
 		<login_user>Usuário</login_user>
 		<login_passwd>Senha</login_passwd>
 	</login>
+	<groups>
+		<groups_default>Amigos</groups_default>
+	</groups>
 </language>
