--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -70,4 +70,24 @@
 	<error>
 		<error_disconnected>Perdeu contato com o servidor. Favor reconectar.</error_disconnected>
 	</error>
+	<challenge>
+		<challenge_title_invite>Convidar para jogar</challenge_title_invite>
+		<challenge_offer>Convite para jogar</challenge_offer>
+		<challenge_pieces>Pecas:</challenge_pieces>
+		<challenge_information>convidou para jogar uma partida com as seguintes caracteristicas:</challenge_information>
+		<challenge_time_label>Tempo da partida:</challenge_time_label>
+		<challenge_time_label_min>min</challenge_time_label_min>
+		<challenge_rating>Valendo rating</challenge_rating>
+		<challenge_category>Categoria de jogo:</challenge_category>
+		<challenge_inc_label>Incremento:</challenge_inc_label>
+		<challenge_inc_label_seg>seg</challenge_inc_label_seg>
+		<challenge_private>Partida privada</challenge_private>
+		<challenge_invite>Convidar</challenge_invite>
+		<challenge_cancel>Cancelar</challenge_cancel>
+		<challenge_decline>Rejeitar</challenge_decline>
+		<challenge_chat>Abrir chat</challenge_chat>
+		<challenge_new_parameters>Redesafiar</challenge_new_parameters>
+		<challenge_accept>Aceitar</challenge_accept>
+		<challenge_no_time>Sem tempo</challenge_no_time>
+	</challenge>
 </language>
