--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -49,6 +49,7 @@
 		<room_order_nick>Apelido</room_order_nick>
 		<room_order_rating>Rating</room_order_rating>
 		<room_create>Criar sala</room_create>
+		<room_name>Nome da sala: </room_name>
 	</room>
 	<group>
 		<group_default>Amigos</group_default>
