--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -97,4 +97,29 @@
 		<challenge_accept>Aceitar</challenge_accept>
 		<challenge_no_time>Sem tempo</challenge_no_time>
 	</challenge>
+	<game>
+		<game_accept>Aceitar</game_accept>
+		<game_decline>Recusar</game_decline>
+		<game_ok>Ok</game_ok>
+		<game_draw>Requisicao de empate</game_draw>
+		<game_draw_text>O usuario </game_draw_text>
+		<game_draw_text2> requisitou empate. Deseja aceitar?</game_draw_text2>
+		<game_end>Fim de jogo</game_end>
+		<game_resign_text>O usuario </game_resign_text>
+		<game_resign_text2> desistiu da partida.</game_resign_text2>
+		<game_adjourn>Adiar partida</game_adjourn>
+		<game_adjourn_text>O usuario </game_adjourn_text>
+		<game_adjourn_text2> deseja adiar a partida. Deseja aceitar?</game_adjourn_text2>
+		<game_resign_text>O usuario </game_resign_text>
+		<game_resign_text2> desistiu da partida.</game_resign_text2>
+		<game_abort>Encerrar partida</game_abort>
+		<game_checkmatew_text>Parabens! Voce ganhou do usuario </game_checkmatew_text>
+		<game_checkmatew_text2> por xeque-mate.</game_checkmatew_text2>
+		<game_checkmatel_text>Voce perdeu para o usuario </game_checkmatel_text>
+		<game_checkmatel_text2> por xeque-mate.</game_checkmatel_text2>
+		<game_timew_text>Voce ganhou do usuario </game_timew_text>
+		<game_timew_text2> por tempo.</game_timew_text2>
+		<game_timel_text>O seu tempo acabou. Voce perdeu para o usuario </game_timel_text>
+		<game_timel_text2>.</game_timel_text2>
+	</game>
 </language>
