--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -108,18 +108,17 @@
 		<game_decline>Recusar</game_decline>
 		<game_ok>Ok</game_ok>
 		<game_draw>Requisicao de empate</game_draw>
-		<game_draw_text>O usuario %s requisitou empate. Deseja aceitar?</game_draw_text>
+		<game_draw_text>%s requisitou empate, deseja aceitar?</game_draw_text>
 		<game_end>Fim de jogo</game_end>
-		<game_resign_text>O usuario %s desistiu da partida.</game_resign_text>
+		<game_resign_text>%s desistiu da partida.</game_resign_text>
 		<game_adjourn>Adiar partida</game_adjourn>
-		<game_adjourn_text>O usuario %s deseja adiar a partida. Deseja aceitar?</game_adjourn_text>
-		<game_resign_text>O usuario %s desistiu da partida.</game_resign_text>
+		<game_adjourn_text>%s deseja adiar a partida, deseja aceitar?</game_adjourn_text>
 		<game_abort>Encerrar partida</game_abort>
-		<game_abort_text>O usuario %s deseja encerrar a partida. Deseja aceitar?</game_abort_text>
-		<game_checkmatew_text>Parabens! Voce ganhou do usuario %s por xeque-mate.</game_checkmatew_text>
-		<game_checkmatel_text>Voce perdeu para o usuario %s por xeque-mate.</game_checkmatel_text>
-		<game_timew_text>Voce ganhou do usuario %s por tempo.</game_timew_text>
-		<game_timel_text>O seu tempo acabou. Voce perdeu para o usuario %s.</game_timel_text>
+		<game_abort_text>%s deseja encerrar a partida, deseja aceitar?</game_abort_text>
+		<game_checkmatew_text>Parabens! Voce ganhou de %s por xeque-mate.</game_checkmatew_text>
+		<game_checkmatel_text>Voce perdeu para %s por xeque-mate.</game_checkmatel_text>
+		<game_timew_text>Voce ganhou de %s por tempo.</game_timew_text>
+		<game_timel_text>O seu tempo acabou. Voce perdeu para %s.</game_timel_text>
 
 		<game_options>Opções</game_options>
 		<game_moves>Lances</game_moves>
