--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -68,6 +68,8 @@
 		<room_create>Criar</room_create>
 		<room_cancel>Cancelar</room_cancel>
 		<room_cancel_text>Realmente deseja cancelar a criacao desta sala?</room_cancel_text>
+		<room_invalid_name>Nome inválido para sala</room_invalid_name>
+		<room_invalid_length>Tamanho máximo de 50 caracteres</room_invalid_length>
 		<room_yes>Sim</room_yes>
 		<room_no>Nao</room_no>
 	</room>
