--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -84,6 +84,7 @@
 	</status>
 	<usermenu>
 		<usermenu_send_message>Conversar</usermenu_send_message>
+		<usermenu_send_offlinemessage>Deixar recado</usermenu_send_offlinemessage>
 		<usermenu_match>Convidar para jogar</usermenu_match>
 		<usermenu_add_contact>Adicionar contato</usermenu_add_contact>
 		<usermenu_remove_contact>Remover contato</usermenu_remove_contact>
