--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -139,6 +139,8 @@
 		<game_checkmatel_text>Voce perdeu para %s por xeque-mate.</game_checkmatel_text>
 		<game_timew_text>Voce ganhou de %s por tempo.</game_timew_text>
 		<game_timel_text>O seu tempo acabou. Voce perdeu para %s.</game_timel_text>
+		<game_remove_game>Voce nao pode fechar um jogo em andamento</game_remove_game>
+		<game_remove_game_title>Atencao</game_remove_game_title>
 
 		<game_options>Opções</game_options>
 		<game_moves>Lances</game_moves>
