Fixed: Some phrases in encoding file wasn't right (again)

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -24,7 +24,7 @@
 	</login>
 	<menu>
 		<menu_search_game>Buscar Partida</menu_search_game>
-		<menu_search_user>Buscar Usuá¡rio</menu_search_user>
+		<menu_search_user>Buscar Usuário</menu_search_user>
 		<menu_news>Notícias</menu_news>
 		<menu_preferences>Preferências</menu_preferences>
 		<menu_help>Ajuda</menu_help>
