Fixed: Char encoding

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -92,7 +92,7 @@
 		<usermenu_match>Convidar para jogar</usermenu_match>
 		<usermenu_add_contact>Adicionar contato</usermenu_add_contact>
 		<usermenu_remove_contact>Remover contato</usermenu_remove_contact>
-		<usermenu_view_profile>Ver perfil e informaÃ§Ãµes</usermenu_view_profile>
+		<usermenu_view_profile>Ver perfil e informações</usermenu_view_profile>
 	</usermenu>
 	<error>
 		<error_disconnected>Perdeu contato com o servidor. Favor reconectar.</error_disconnected>
