--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -20,7 +20,7 @@
 		<login_load_scripts>Carregando scripts...</login_load_scripts>
 		<login_load_css>Carregando css...</login_load_css>
 		<login_load_images>Carregando imagens...</login_load_images>
-		<login_load_user_list>Carregando lista de usuá¡rios...</login_load_user_list>
+		<login_load_user_list>Carregando lista de usuários...</login_load_user_list>
 	</login>
 	<menu>
 		<menu_search_game>Buscar Partida</menu_search_game>
