--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -142,6 +142,8 @@
 		<game_remove_game>Você não pode fechar um jogo em andamento</game_remove_game>
 		<game_remove_game_title>Atenção</game_remove_game_title>
 
+		<game_canceled>O jogo foi cancelado.</game_canceled>
+
 		<game_options>Opções</game_options>
 		<game_moves>Lances</game_moves>
 		<game_send_draw>Empatar</game_send_draw>
