Fixed: Disable observer game when user is playing or observer a game. Exit game room correctly when close game board. Added: vCard game board players photo.

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -170,6 +170,9 @@
 		<game_promotion_bishop>Bispo</game_promotion_bishop>
 		<game_promotion_knight>Cavalo</game_promotion_knight>
 
+		<game_observer_alert>Você não pode observar uma nova partida enquanto estiver jogando ou observando uma partida.</game_observer_alert>
+		<game_observer_alert_title>Aviso</game_observer_alert_title>
+
 		<game_white_pawn>Peão Branco</game_white_pawn>
 		<game_white_rook>Torre Branca</game_white_rook>
 		<game_white_knight>Cavalo Branco</game_white_knight>
