Modified: changes in css file to fit new challenge window Modified: function to search a user rating in room, if user doesn't in searched room, return a default rating string Modified: challenge window Modified: some text to new challenge window in pt_BR lang file
TODO - translate new text to others languages

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -134,6 +134,8 @@
 		<challenge_new_parameters>Redesafiar</challenge_new_parameters>
 		<challenge_accept>Aceitar</challenge_accept>
 		<challenge_no_time>Sem tempo</challenge_no_time>
+		<challenge_color_auto>Automatico</challenge_color_auto>
+		<challenge_auto_flag>Auto-flag</challenge_auto_flag>
 	</challenge>
 	<game>
 		<game_accept>Aceitar</game_accept>
