--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -170,7 +170,7 @@
 		<game_send_adjourn>Pausar / adiar</game_send_adjourn>
 		<game_give_time>Dar tempo ao adversário</game_give_time>
 		<game_pawn_promotion>Promoção do peão</game_pawn_promotion>
-		<game_promotion_queen>Rainha</game_promotion_queen>
+		<game_promotion_queen>Dama</game_promotion_queen>
 		<game_promotion_rook>Torre</game_promotion_rook>
 		<game_promotion_bishop>Bispo</game_promotion_bishop>
 		<game_promotion_knight>Cavalo</game_promotion_knight>
