Inserted rigth logo on the load screen.

--- a/scripts/lang/en_US.xml
+++ b/scripts/lang/en_US.xml
@@ -109,7 +109,7 @@
 		<usermenu_match>Invite to play</usermenu_match>
 		<usermenu_add_contact>Add contact</usermenu_add_contact>
 		<usermenu_remove_contact>Remove contact</usermenu_remove_contact>
-		<usermenu_view_profile>View perfil</usermenu_view_profile>
+		<usermenu_view_profile>View profile</usermenu_view_profile>
 		<usermenu_disconnect_user>Disconnect user</usermenu_disconnect_user>
 		<usermenu_ban>Ban</usermenu_ban>
 		<usermenu_mute>Mute</usermenu_mute>
