--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -35,6 +35,7 @@
 		<login_load_user_list>Carregando lista de usuários...</login_load_user_list>
 	</login>
 	<menu>
+		<menu_adjourn>Adjudicar</menu_adjourn>
 		<menu_search_game>Buscar Partida</menu_search_game>
 		<menu_search_user>Buscar Usuário</menu_search_user>
 		<menu_news>Notícias</menu_news>
