--- a/scripts/lang/en_US.xml
+++ b/scripts/lang/en_US.xml
@@ -47,6 +47,7 @@
 		<menu_history>History</menu_history>
 	</menu>
 	<contact>
+		<menu_adjourn>Adjourn</menu_adjourn>
 		<contact_contacts>Contacts</contact_contacts>
 		<contact_online>Online</contact_online>
 		<contact_offline>Offline</contact_offline>
@@ -69,6 +70,10 @@
 		<contact_user>User</contact_user>
 		<contact_teacher>Teacher</contact_teacher>
 		<contact_admin>Admin</contact_admin>
+		<contact_search_by>Search by:</contact_search_by>
+		<contact_by_name>Name</contact_by_name>
+		<contact_by_user>Nick</contact_by_user>
+		<contact_both>Both</contact_both>
 	</contact>
 	<chat>
 		<chat_warning>Warning</chat_warning>
