--- a/scripts/lang/zh_CN.xml
+++ b/scripts/lang/zh_CN.xml
@@ -69,6 +69,10 @@
 		<contact_user>用户</contact_user>
 		<contact_teacher>老师</contact_teacher>
 		<contact_admin>管理员</contact_admin>
+		<contact_search_by>Search by:</contact_search_by>
+		<contact_by_name>Name</contact_by_name>
+		<contact_by_user>Nick</contact_by_user>
+		<contact_both>Both</contact_both>
 	</contact>
 	<chat>
 		<chat_warning>警告</chat_warning>
